[package]
name = 'lego-collator'
version = '1.1.0'
authors = ['Totem Accounting <support@totemaccounting.com>']
description = 'A Totem LEGO node'
license = 'GNU'
homepage = 'https://totemaccounting.com'
repository = 'https://gitlab.com/totem-tech/totem'
edition = '2021' 
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'lego-collator'
path = 'src/main.rs'

[features]
default = []
runtime-benchmarks = ['parachain-totem-lego-runtime/runtime-benchmarks']
# try-runtime = ['parachain-totem-lego-runtime/try-runtime']

[dependencies]
derive_more = '0.99.2'
log = '0.4.14'
codec = { package = 'parity-scale-codec', version = '2.3.0' }
structopt = '0.3.8'
serde = { version = '1.0.132', features = ['derive'] }
hex-literal = '0.3.4'
futures = { version = '0.3.1', features = ['compat'] }
async-trait = '0.1.42'

# Parachain runtimes
parachain-totem-lego-runtime = { path = '../runtime' }
parachains-common = { path = "../../parachains-common" }


# Substrate dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-service = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-network = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sc-tracing = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
substrate-prometheus-endpoint = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

# # try-runtime stuff.
# try-runtime-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

# RPC related dependencies
jsonrpc-core = '18.0.0'
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
frame-rpc-system = { package = 'substrate-frame-rpc-system', git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

# Cumulus dependencies
cumulus-client-cli = { path = '../client/cli' }
cumulus-client-consensus-aura = { path = '../client/consensus/aura' }
cumulus-client-consensus-relay-chain = { path = '../client/consensus/relay-chain' }
cumulus-client-consensus-common = { path = '../client/consensus/common' }
cumulus-client-service = { path = '../client/service' }
cumulus-client-network = { path = '../client/network' }
cumulus-primitives-core = { path = '../primitives/core' }
cumulus-primitives-parachain-inherent = { path = '../primitives/parachain-inherent' }
cumulus-relay-chain-interface = { path = '../client/relay-chain-interface' }
cumulus-relay-chain-local = { path = '../client/relay-chain-local' }

# Polkadot dependencies
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'polkadot-v0.9.13' }
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'polkadot-v0.9.13' }
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'polkadot-v0.9.13' }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'polkadot-v0.9.13' }

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

[dev-dependencies]
assert_cmd = '0.12'
nix = '0.17'
tempfile = '3.2.0'

