[package]
name = 'lego-runtime'
version = '1.1.0'
authors = ['Totem Accounting <support@totemaccounting.com>']
description = 'The Totem LEGO Parachain runtime'
license = 'Apache-2.0'
homepage = 'https://totemaccounting.com'
repository = 'https://gitlab.com/totem-tech/totem'
edition = '2021' 

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.3.0', default-features = false, features = ['derive'] }
log = { version = '0.4.14', default-features = false }
parachain-info = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
scale-info = { version = '1.0.0', default-features = false, features = ['derive'] }
serde = { version = '1.0.132', optional = true, features = ['derive'] }








# Totem
totem-common = { default-features = false, path = '../../common' }
pallet-accounting = { default-features = false, path = '../../pallets/accounting' }
pallet-balances-totem = { default-features = false, path = '../../pallets/balances' }
# pallet-archive = { default-features = false, path = '../../pallets/archive' }
# pallet-bonsai = { default-features = false, path = '../../pallets/bonsai' }
# pallet-escrow = { default-features = false, path = '../../pallets/escrow' }
# pallet-funding = { default-features = false, path = '../../pallets/funding' }
# pallet-orders = { default-features = false, path = '../../pallets/orders' }
# pallet-prefunding = { default-features = false, path = '../../pallets/prefunding' }
# pallet-teams = { default-features = false, path = '../../pallets/teams' }
# pallet-timekeeping = { default-features = false, path = '../../pallets/timekeeping' }
pallet-transaction-payment = { default-features = false, path = '../../pallets/transaction-payment', package = 'pallet-transaction-payment-totem' }
# pallet-transfer = { default-features = false, path = '../../pallets/transfer' }

# Substrate dependencies
sp-std = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-api = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-io = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-version = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-session = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }

frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
frame-executive = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
frame-system = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
pallet-assets = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
# pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
# pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
pallet-aura = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.13' }

parachains-common = { path = '../../parachains-common', default-features = false }

# Cumulus dependencies
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-ping = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'polkadot-v0.9.13' }
xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'polkadot-v0.9.13' }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'polkadot-v0.9.13' }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'polkadot-v0.9.13' }
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'polkadot-v0.9.13' }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

[features]
default = [ 'std' ]
std = [
	'codec/std',
	'cumulus-pallet-aura-ext/std',
	'cumulus-pallet-dmp-queue/std',
	'cumulus-pallet-parachain-system/std',
	'cumulus-pallet-xcm/std',
	'cumulus-pallet-xcmp-queue/std',
	'cumulus-ping/std',
	'cumulus-primitives-core/std',
	'cumulus-primitives-timestamp/std',
	'cumulus-primitives-utility/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'log/std',
	'pallet-accounting/std',
	'pallet-assets/std',
	'pallet-aura/std',
	'pallet-balances-totem/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'parachain-info/std',
	'parachains-common/std',
	'scale-info/std',
	'serde',
	'sp-api/std',
	'sp-block-builder/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-io/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
	'totem-common/std',
	'xcm-builder/std',
	'xcm-executor/std',
	'xcm/std',
]
